19/10/2016 - 0.0.1: Generated project, brought in own esLint, changed component structure.
19/10/2016 - 0.0.2: Fixed Sass webpack loader dependency issue, added form component. Set up skeleton for form component with library 'formous'
19/10/2016 - 0.0.3: Fleshed out component structure. Form submittion, clear form, mutating form value.
19/10/2016 - 0.0.4: Component logic cleaned up.
20/10/2016 - 0.0.5: Translation 0-999 OK.
20/10/2016 - 0.0.6: Added sketch for "in between labels" (e.g: "one THOUSAND AND three"). See "addThousands".
20/10/2016 - 0.0.7: Translation OK!
20/10/2016 - 0.0.8: Cleaned up, fixed last minute bugs
20/10/2016 - 0.0.9: Misc. cleanup.
21/10/2016 - 0.1.0: Fixed bug with translation of larger numbers.