@@ -16,42 +16,65 @@
 .FormComponent__outerContainer{
 		margin: 10%  auto;
 		@include rem(width, 450px)
-		box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.25);
+		box-shadow: 0px 1px 6px 1px rgba(0,0,0,0.4);
+		border-radius: 0% 0% 8% 8%;
 
 	.FormComponent__title {
 		text-align: center;
 		@include rem(padding, 20px 20px);
-		text-shadow:0px 1px 0px #585114;
-		background: #C87D08;
+		text-shadow:2px 2px 5px #747373;
+		background: $rgb-jsnumerals-orange;
 		color: white;
 	}
 
 	.FormComponent__innerContainer {
-		border: 2px dashed white;
-		background: white;
+		background: #fffcf6;
 		@include rem(padding, 10px 35px 35px 35px);
+		border-radius: 0% 0% 9% 9%;
+
+		hr {
+			@extend .e-seperator-depressed;
+		}
 
 		.FormComponent__input {
 			position: relative;
 			margin: 10% auto;
 			width: 100%;
 
+			input {
+				background-color: #F6F6F6;
+				color: black;
+				border: 2px solid #EBE9E9;
+				@include rem(padding, 10px);
+				box-sizing: border-box;
+				border-radius: 4px;
+				width: 100%;
+				@include rem(margin, 5px 0px 5px 0);
+				box-shadow:
+				  inset 0 0 5px  rgba(0,0,0,0.1),
+				        0 0 0px rgba(0,0,0,0.1);
+			}
+
+			.header {
+				text-shadow:0px 1px 20px lightgrey;
+				@include rem(margin, 10px 0);
+				@include rem(letter-spacing,0.5px);
+			}
+
 			.FormComponent__arabic {
-				input {
-					width: 100%;
-					@include rem(margin, 5px 0 5px 0);
-					@include rem(padding, 5px 5px);
-				}
+
 			}
 
 			.FormComponent__english {
 				@include rem(margin, 30px 0 40px 0);
 
-				h5, p {
+				header, p {
 					display: inline-block;
 				}
 				p{
-					@include rem(margin, 0 0 0 10px);
+					@include rem(margin, 0 0 0 15px);
+					@include rem(padding, 0 0 0 8px);
+					border-left: 5px solid $rgb-jsnumerals-orange;
 				}
 
 				.hidden { display:none; }
@@ -68,7 +91,7 @@
 
 		button:nth-of-type(1) {
 			@include rem(margin, 0 5px 0 0);
-			background:linear-gradient(to bottom, #70FA3A 5%, #62BB0C 100%);
+			background:linear-gradient(to bottom, #70FA3A 5%, $rgb-jsnumerals-green 100%);
 			background-color:#70FA3A;
 			border:1px solid #10CA3C;
 		}
@@ -79,7 +102,7 @@
 		}
 
 		button:nth-of-type(2) {
-			background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+			background:linear-gradient(to bottom, #ffec64 5%, $rgb-jsnumerals-orange--light 100%);
 			background-color:#ffec64;
 			border:1px solid #ffaa22;
 		}
