@@ -23,7 +23,7 @@ body {
 	font-family: 'Open Sans Regular', sans-serif;
 
 	h1 {
-		font-size: 150%;
+		font-size: 220%;
 	}
 
 	h2 {
