@@ -16,3 +16,7 @@ $blue: purple;
 
 $browser-context: 16;
 
+$rgb-jsnumerals-green: #62BB0C;
+$rgb-jsnumerals-orange: #C87D08;
+$rgb-jsnumerals-orange--light: #ffab23;
+
