@@ -1,22 +1,0 @@
-0 info it worked if it ends with ok
-1 verbose cli [ 'C:\\Program Files\\nodejs\\node.exe',
-1 verbose cli   'C:\\Users\\Dean\\AppData\\Roaming\\npm\\node_modules\\npm\\bin\\npm-cli.js',
-1 verbose cli   'start' ]
-2 info using npm@3.8.0
-3 info using node@v6.3.1
-4 verbose stack Error: ENOENT: no such file or directory, open 'D:\1 - CORTANA\3 - Projects\18 - Coding\src\Web\Challenges\digitalnatives\project\package.json'
-4 verbose stack     at Error (native)
-5 verbose cwd D:\1 - CORTANA\3 - Projects\18 - Coding\src\Web\Challenges\digitalnatives\project
-6 error Windows_NT 10.0.14393
-7 error argv "C:\\Program Files\\nodejs\\node.exe" "C:\\Users\\Dean\\AppData\\Roaming\\npm\\node_modules\\npm\\bin\\npm-cli.js" "start"
-8 error node v6.3.1
-9 error npm  v3.8.0
-10 error path D:\1 - CORTANA\3 - Projects\18 - Coding\src\Web\Challenges\digitalnatives\project\package.json
-11 error code ENOENT
-12 error errno -4058
-13 error syscall open
-14 error enoent ENOENT: no such file or directory, open 'D:\1 - CORTANA\3 - Projects\18 - Coding\src\Web\Challenges\digitalnatives\project\package.json'
-15 error enoent ENOENT: no such file or directory, open 'D:\1 - CORTANA\3 - Projects\18 - Coding\src\Web\Challenges\digitalnatives\project\package.json'
-15 error enoent This is most likely not a problem with npm itself
-15 error enoent and is related to npm not being able to find a file.
-16 verbose exit [ -4058, true ]
